python-compiler/tests/snapshots/lib__bitwise__bitwise_with_negatives.snap
---
source: tests/bitwise.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  store i64 9221401712017801211, ptr %x, align 4
  store i64 9221120237041090563, ptr %y, align 4
  %x1 = load i64, ptr %x, align 4
  %y2 = load i64, ptr %y, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %x1, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %check_qnan3 = and i64 %y2, 9221120237041090560
  %is_float4 = icmp ne i64 %check_qnan3, 9221120237041090560
  %tag_bits5 = and i64 %y2, 1970324836974592
  %tag6 = lshr i64 %tag_bits5, 48
  %is_bool7 = icmp eq i64 %tag6, 1
  %is_string8 = icmp eq i64 %tag6, 2
  %is_list9 = icmp eq i64 %tag6, 3
  %map_bool10 = select i1 %is_bool7, i64 2, i64 %tag6
  %map_string11 = select i1 %is_string8, i64 3, i64 %map_bool10
  %map_list12 = select i1 %is_list9, i64 4, i64 %map_string11
  %final_tag13 = select i1 %is_float4, i64 1, i64 %map_list12
  %check_qnan14 = and i64 %x1, 9221120237041090560
  %is_float15 = icmp ne i64 %check_qnan14, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float15, double %i64_to_f64, double %payload_to_f64
  %check_qnan16 = and i64 %y2, 9221120237041090560
  %is_float17 = icmp ne i64 %check_qnan16, 9221120237041090560
  %i64_to_f6418 = bitcast i64 %y2 to double
  %extract_payload19 = and i64 %y2, 281474976710655
  %sign_bit20 = lshr i64 %extract_payload19, 47
  %is_negative21 = icmp eq i64 %sign_bit20, 1
  %sign_extend22 = or i64 %extract_payload19, -281474976710656
  %signed_payload23 = select i1 %is_negative21, i64 %sign_extend22, i64 %extract_payload19
  %payload_to_f6424 = sitofp i64 %signed_payload23 to double
  %final_payload25 = select i1 %is_float17, double %i64_to_f6418, double %payload_to_f6424
  %lhs_to_int = fptosi double %final_payload to i64
  %rhs_to_int = fptosi double %final_payload25 to i64
  %and = and i64 %lhs_to_int, %rhs_to_int
  %int_payload = and i64 %and, 281474976710655
  %pyobject_int = or i64 9221120237041090560, %int_payload
  %check_qnan26 = and i64 %pyobject_int, 9221120237041090560
  %is_float27 = icmp ne i64 %check_qnan26, 9221120237041090560
  %tag_bits28 = and i64 %pyobject_int, 1970324836974592
  %tag29 = lshr i64 %tag_bits28, 48
  %is_bool30 = icmp eq i64 %tag29, 1
  %is_string31 = icmp eq i64 %tag29, 2
  %is_list32 = icmp eq i64 %tag29, 3
  %map_bool33 = select i1 %is_bool30, i64 2, i64 %tag29
  %map_string34 = select i1 %is_string31, i64 3, i64 %map_bool33
  %map_list35 = select i1 %is_list32, i64 4, i64 %map_string34
  %final_tag36 = select i1 %is_float27, i64 1, i64 %map_list35
  %check_qnan37 = and i64 %pyobject_int, 9221120237041090560
  %is_float38 = icmp ne i64 %check_qnan37, 9221120237041090560
  %i64_to_f6439 = bitcast i64 %pyobject_int to double
  %extract_payload40 = and i64 %pyobject_int, 281474976710655
  %sign_bit41 = lshr i64 %extract_payload40, 47
  %is_negative42 = icmp eq i64 %sign_bit41, 1
  %sign_extend43 = or i64 %extract_payload40, -281474976710656
  %signed_payload44 = select i1 %is_negative42, i64 %sign_extend43, i64 %extract_payload40
  %payload_to_f6445 = sitofp i64 %signed_payload44 to double
  %final_payload46 = select i1 %is_float38, double %i64_to_f6439, double %payload_to_f6445
  %is_int = icmp eq i64 %final_tag36, 0
  %is_string47 = icmp eq i64 %final_tag36, 3
  br i1 %is_string47, label %print_string, label %check_int

check_int:                                        ; preds = %entry
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload46 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload46)
  br label %print_end

print_string:                                     ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject_int, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %x48 = load i64, ptr %x, align 4
  %y49 = load i64, ptr %y, align 4
  %check_qnan50 = and i64 %x48, 9221120237041090560
  %is_float51 = icmp ne i64 %check_qnan50, 9221120237041090560
  %tag_bits52 = and i64 %x48, 1970324836974592
  %tag53 = lshr i64 %tag_bits52, 48
  %is_bool54 = icmp eq i64 %tag53, 1
  %is_string55 = icmp eq i64 %tag53, 2
  %is_list56 = icmp eq i64 %tag53, 3
  %map_bool57 = select i1 %is_bool54, i64 2, i64 %tag53
  %map_string58 = select i1 %is_string55, i64 3, i64 %map_bool57
  %map_list59 = select i1 %is_list56, i64 4, i64 %map_string58
  %final_tag60 = select i1 %is_float51, i64 1, i64 %map_list59
  %check_qnan61 = and i64 %y49, 9221120237041090560
  %is_float62 = icmp ne i64 %check_qnan61, 9221120237041090560
  %tag_bits63 = and i64 %y49, 1970324836974592
  %tag64 = lshr i64 %tag_bits63, 48
  %is_bool65 = icmp eq i64 %tag64, 1
  %is_string66 = icmp eq i64 %tag64, 2
  %is_list67 = icmp eq i64 %tag64, 3
  %map_bool68 = select i1 %is_bool65, i64 2, i64 %tag64
  %map_string69 = select i1 %is_string66, i64 3, i64 %map_bool68
  %map_list70 = select i1 %is_list67, i64 4, i64 %map_string69
  %final_tag71 = select i1 %is_float62, i64 1, i64 %map_list70
  %check_qnan72 = and i64 %x48, 9221120237041090560
  %is_float73 = icmp ne i64 %check_qnan72, 9221120237041090560
  %i64_to_f6474 = bitcast i64 %x48 to double
  %extract_payload75 = and i64 %x48, 281474976710655
  %sign_bit76 = lshr i64 %extract_payload75, 47
  %is_negative77 = icmp eq i64 %sign_bit76, 1
  %sign_extend78 = or i64 %extract_payload75, -281474976710656
  %signed_payload79 = select i1 %is_negative77, i64 %sign_extend78, i64 %extract_payload75
  %payload_to_f6480 = sitofp i64 %signed_payload79 to double
  %final_payload81 = select i1 %is_float73, double %i64_to_f6474, double %payload_to_f6480
  %check_qnan82 = and i64 %y49, 9221120237041090560
  %is_float83 = icmp ne i64 %check_qnan82, 9221120237041090560
  %i64_to_f6484 = bitcast i64 %y49 to double
  %extract_payload85 = and i64 %y49, 281474976710655
  %sign_bit86 = lshr i64 %extract_payload85, 47
  %is_negative87 = icmp eq i64 %sign_bit86, 1
  %sign_extend88 = or i64 %extract_payload85, -281474976710656
  %signed_payload89 = select i1 %is_negative87, i64 %sign_extend88, i64 %extract_payload85
  %payload_to_f6490 = sitofp i64 %signed_payload89 to double
  %final_payload91 = select i1 %is_float83, double %i64_to_f6484, double %payload_to_f6490
  %lhs_to_int92 = fptosi double %final_payload81 to i64
  %rhs_to_int93 = fptosi double %final_payload91 to i64
  %or = or i64 %lhs_to_int92, %rhs_to_int93
  %int_payload94 = and i64 %or, 281474976710655
  %pyobject_int95 = or i64 9221120237041090560, %int_payload94
  %check_qnan96 = and i64 %pyobject_int95, 9221120237041090560
  %is_float97 = icmp ne i64 %check_qnan96, 9221120237041090560
  %tag_bits98 = and i64 %pyobject_int95, 1970324836974592
  %tag99 = lshr i64 %tag_bits98, 48
  %is_bool100 = icmp eq i64 %tag99, 1
  %is_string101 = icmp eq i64 %tag99, 2
  %is_list102 = icmp eq i64 %tag99, 3
  %map_bool103 = select i1 %is_bool100, i64 2, i64 %tag99
  %map_string104 = select i1 %is_string101, i64 3, i64 %map_bool103
  %map_list105 = select i1 %is_list102, i64 4, i64 %map_string104
  %final_tag106 = select i1 %is_float97, i64 1, i64 %map_list105
  %check_qnan107 = and i64 %pyobject_int95, 9221120237041090560
  %is_float108 = icmp ne i64 %check_qnan107, 9221120237041090560
  %i64_to_f64109 = bitcast i64 %pyobject_int95 to double
  %extract_payload110 = and i64 %pyobject_int95, 281474976710655
  %sign_bit111 = lshr i64 %extract_payload110, 47
  %is_negative112 = icmp eq i64 %sign_bit111, 1
  %sign_extend113 = or i64 %extract_payload110, -281474976710656
  %signed_payload114 = select i1 %is_negative112, i64 %sign_extend113, i64 %extract_payload110
  %payload_to_f64115 = sitofp i64 %signed_payload114 to double
  %final_payload116 = select i1 %is_float108, double %i64_to_f64109, double %payload_to_f64115
  %is_int117 = icmp eq i64 %final_tag106, 0
  %is_string118 = icmp eq i64 %final_tag106, 3
  br i1 %is_string118, label %print_string122, label %check_int119

check_int119:                                     ; preds = %print_end
  br i1 %is_int117, label %print_int120, label %print_float121

print_int120:                                     ; preds = %check_int119
  %to_int124 = fptosi double %final_payload116 to i64
  %printf_int125 = call i32 (ptr, ...) @printf(ptr @int_format_string.1, i64 %to_int124)
  br label %print_end123

print_float121:                                   ; preds = %check_int119
  %printf_float126 = call i32 (ptr, ...) @printf(ptr @float_format_string.2, double %final_payload116)
  br label %print_end123

print_string122:                                  ; preds = %print_end
  %extract_ptr_payload127 = and i64 %pyobject_int95, 281474976710655
  %payload_to_ptr128 = inttoptr i64 %extract_ptr_payload127 to ptr
  %printf_string129 = call i32 (ptr, ...) @printf(ptr @string_format_string.3, ptr %payload_to_ptr128)
  br label %print_end123

print_end123:                                     ; preds = %print_string122, %print_float121, %print_int120
  ret i32 0
}

declare i32 @printf(ptr, ...)
